k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supermarket-ingress
spec:
  rules:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/price-service/compare
            pathType: Prefix
            backend:
              service:
                name: service-2
                port:
                  number: 8080
          - path: /api/v1/price-service/cheapest
            pathType: Prefix
            backend:
              service:
                name: service-2
                port:
                  number: 8080

          - path: /api/v1/user-service/register
            pathType: Prefix
            backend:
              service:
                name: service-3
                port:
                  number: 8081
          - path: /api/v1/user-service/login
            pathType: Prefix
            backend:
              service:
                name: service-3
                port:
                  number: 8081
